--- a/docs/daily-04.Rmd
+++ b/docs/daily-04.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Geography 176A Lab 1"
 subtitle: "Meet R, RMarkdown, & Github"
-author: Mike Johnson
+author: Xingxin Li
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
   html_document:
@@ -177,7 +177,7 @@ cities %>%
 ## In line code:
 
 ```{r, echo = FALSE}
-threshold = 1000000
+threshold = 100000
 big_cities = 
   filter(cities, population > threshold) %>%
   filter(!state_name %in% c("Alaska", "Hawaii", "Puerto Rico"))
@@ -199,7 +199,7 @@ big_cities %>%
        subtitle = paste("Cities bigger then:", 
                         formatC(threshold, format="d", big.mark=","),
                         "people"),
-       caption = paste("Made by:", rmarkdown::metadata$author, "- Geography 176A"),
+       caption = paste("Made by: Xingxin Li", rmarkdown::metadata$author, "- Geography 176A"),
        x="",
        y = "") + 
   theme_bw()
